--- a/frontend/core/src/main/webapp/static/app/base/toaster.html
+++ b/frontend/core/src/main/webapp/static/app/base/toaster.html
@@ -24,7 +24,7 @@
     </a>
   </div>
 
-  <a href class="group-mixed--right" ng-click="closeNotificationAndCall(notification)">
+  <a href class="group-mixed--right icon-downplayed" ng-click="closeNotificationAndCall(notification)">
     <span class="icon-x"></span>
   </a>
 </div>
