--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -20,8 +20,8 @@
         <span class="highlighted">note</span> created!
       </h2>
       <div class="textgroup-ingress row">make your way to
-      <a href ng-click="changeFeature('lists', undefined, true)">
-        <span class="text-highlighted">lists</span>
+      <a href class="highlighted" ng-click="changeFeature('lists', undefined, true)">
+        <span>lists</span>
       </a> by using the menu</div>
       <div class="text-normal row">&#8230;or add more notes by hitting the plus sign again</div>
     </div>
