--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -35,7 +35,7 @@
     </div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
     <div class="group-mixed">
-      <a href class="group-mixed--middle" swiper-click="swipeToContext()">
+      <a href class="group-mixed--middle link" swiper-click="swipeToContext()">
         <span class="text-link">no context</span>
       </a>
       <div class="group-mixed--right">
