--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -5,10 +5,10 @@
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endListEdit()" >
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !list.deleted ? 'save' : 'back'"></span>
         </a>
-        <a ng-if="!list.deleted" class="group-symmetrical--right" href ng-click="deleteListInEdit()" >
+        <a href ng-if="!list.deleted" class="group-symmetrical--right" ng-click="deleteListInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a ng-if="list.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteList(list)"><span class="text-navigation">restore</span></a>
+        <a href ng-if="list.deleted" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteList(list)"><span class="text-navigation">restore</span></a>
       </div>
 
       <div class="row-vertically-centered with-textarea">
