--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -29,8 +29,8 @@
         created!
       </h2>
       <div class="textgroup-ingress row">go to
-        <a href ng-click="changeFeature('notes', undefined, true)">
-          <span class="text-highlighted">notes</span>
+        <a href class="highlighted" ng-click="changeFeature('notes', undefined, true)">
+          <span >notes</span>
         </a> by clicking the menu icon in the top-left corner
       </div>
       <div class="text-normal row">&#8230;or add more tasks by hitting the plus sign again</div>
