--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -2,7 +2,7 @@
   <section ng-if="activeDetails === 'account'" class="container-content">
     <h2 class="group-heading justified row">account</h2>
     <div class="group-mixed">
-      <a href class="group-mixed--middle" swiper-click="openEditor('user', undefined, 'password')">
+      <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'password')">
         <span class="text-link">change password</span>
       </a>
       <div class="group-mixed--right">
@@ -19,7 +19,7 @@
        <span class="text-teaser" ng-bind="extendedMindVersion"></span>
     </p>
     <div class="group-mixed">
-      <a href class="group-mixed--middle" ng-click="openTermsInEditor()">
+      <a href class="group-mixed--middle link" ng-click="openTermsInEditor()">
         <span class="text-link">terms of service</span>
       </a>
       <div class="group-mixed--right">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="group-mixed">
-      <a href class="group-mixed--middle" swiper-click="openPrivacyInEditor()">
+      <a href class="group-mixed--middle link" swiper-click="openPrivacyInEditor()">
         <span class="text-link">privacy policy</span>
       </a>
       <div class="group-mixed--right">
