--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed with-checkbox">
+<div class="group-mixed with-checkbox" ng-class="{'animate-checkbox-checked': task.trans.completed}">
 
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="task.trans.completed"
