--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -23,7 +23,7 @@
   <section class="container-content" style="padding-bottom: 122px;">
     <ul style="padding-left: 28px;">
       <li style="display:inline; margin-right: 15px;">
-        <span class="icon-logo"></span>
+        <span class="icon-logo" style="display:inline;"></span>
       </li>
       <li style="display:inline;">
         <a href="http://www.extendedmind.org" target="_blank">
@@ -55,11 +55,11 @@
     <div class="table row">
       <div class="table-row" style="vertical-align: middle;">
         <a class="table-cell" style="text-align: left;" href="itms://itunes.com/apps/extendedmind">
-          <img ng-src="/{{urlBase}}img/appstore.png" style="width: 120px;"/><br/>
+          <img ng-src="/{{urlBase}}img/download-app-store@2x.png" style="width: 120px;"/><br/>
           <span class="text-details" style="padding-left: 10px;">iphone 4s or later</span>
         </a>
         <a class="table-cell" style="text-align: right;" href="market://details?id=org.extendedmind">
-          <img ng-src="/{{urlBase}}img/playstore.png" style="width: 120px;"/><br/>
+          <img ng-src="/{{urlBase}}img/download-google-play@2x.png" style="width: 120px;"/><br/>
           <span class="text-details" style="padding-right: 10px;">4.4 kitkat or later</span>
         </a>
       </div>
