List prompt directive and infinite scroll rewrite. Added 'no <ITEMS>' prompt and combined it with loading animation used in infinite scroll.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -86,6 +86,7 @@
   <script src="static/app/base/listFooterDirective.js"></script>
   <script src="static/app/base/listItemAddDirective.js"></script>
   <script src="static/app/base/listItemDirective.js"></script>
+  <script src="static/app/base/listPromptDirective.js"></script>
   <script src="static/app/base/toasterDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
