--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,12 +1,16 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
-  <section ng-show="isOnboarded('focusNotes')" class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {trans: {favorited:true, itemType: 'note'}})" swiper-prevent>
+  <section ng-show="isOnboarded('focusNotes')" class="container-content"
+    list="allNotes | itemsFilter:{name:'favorited'}"
+    list-open="openEditor('note', {trans: {favorited:true, itemType: 'note'}})" swiper-prevent>
     <h2 class="group-heading justified row">favorite</h2>
     <div class="animate-list-item-leave tall"
-    ng-repeat="note in getList() | orderBy:'favorited':true | limitTo: currentListLimitTo"
-    list-item="getList().length" ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
-    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+      ng-repeat="note in listInfos.array = (getFullArray()) | orderBy:'favorited':true
+      | limitTo: currentListLimitTo" list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
+    <div list-prompt="notes" list-prompt-infos="listInfos" list-prompt-hide="[onboardingInProgress]"></div>
   </section>
   <footer ng-show="isOnboarded('focusNotes')" class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
+
+  <!-- ONBOARDING -->
   <section ng-if="!isOnboarded('focusNotes')" class="container-content">
     <div class="group-instruction">
       <h2 class="group-heading instruction row">what notes are
