--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -19,6 +19,8 @@
     </a>
   </div>
 </form>
+
+<!-- ONBOARDING -->
 <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', 'on')" class="group-instruction-input">
   <div ng-if="!newItem.title || newItem.title.length === 0" class="text-details row">e.g. groceries, studies, company retreat</div>
   <div ng-if="newItem.title.length" class="text-details row">when done, hit return</div>
