--- a/frontend/core/src/main/webapp/static/app/lists/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listNotes.html
@@ -1,12 +1,14 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container>
-  <section class="container-content" list="allNotes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}" list-open="openEditor('note', {trans: {list:list.uuid, itemType: 'note'}})" list-order="top" swiper-prevent>
+  <section class="container-content" list="allNotes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}"
+    list-open="openEditor('note', {trans: {list:list.uuid, itemType: 'note'}})" swiper-prevent>
     <h2 class="group-heading justified row">notes</h2>
 
     <div class="animate-list-item-leave tall"
-    ng-repeat="note in getList() | itemsFilter:{name:'byListUUID', filterBy: list.uuid}
-    | orderBy:'created':true | limitTo: currentListLimitTo"
-    list-item="getList().length" ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
-    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+      ng-repeat="note in listInfos.array = (getFullArray())
+      | itemsFilter:{name:'byListUUID', filterBy: list.uuid}
+      | orderBy:'created':true | limitTo: currentListLimitTo"
+      list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
+    <div list-prompt="notes" list-prompt-infos="listInfos"></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('list')"></footer>
 </div>
