--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -1,15 +1,19 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container drawer-handle="left">
-  <section class="container-content" list="lists" list-order="top" swiper-prevent
-  ng-init="setListOnboarding('lists', listOnboarding)">
+  <section class="container-content" list="lists" swiper-prevent
+    ng-init="setListOnboarding('lists', listOnboarding)">
     <div ng-show="isOnboarded('lists') || isListOnboardingLockedOrReleased('lists')">
       <h2 class="group-heading justified row">active</h2>
       <div list-item-add="{trans: {itemType: 'list'}}" list-item-add-save="saveList(newItem)"
-      ng-include="urlBase + 'app/lists/listListItemAdd.html'"></div>
+        ng-include="urlBase + 'app/lists/listListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
-      ng-repeat="list in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
-      list-item="getList().length" ng-include="urlBase + 'app/lists/listListItem.html'"></div>
-      <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+        ng-repeat="list in listInfos.array = (getFullArray()) | orderBy:'created':true
+        | limitTo: currentListLimitTo"
+        list-item ng-include="urlBase + 'app/lists/listListItem.html'"></div>
+      <div list-prompt="lists" list-prompt-infos="listInfos"
+        list-prompt-hide="[listItemAddActive, onboardingInProgress]"></div>
     </div>
+
+    <!-- ONBOARDING -->
     <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', undefined)" class="group-instruction">
       <h2 class="group-heading instruction row">link tasks and notes with <span class="highlighted">lists</span>
       </h2>
@@ -24,6 +28,7 @@
         <span class="text-highlighted">extended mind</span> is yours
       </div>
     </div>
+
   </section>
   <footer ng-if="isOnboarded('lists') || !checkListOnboardingLock('lists', 'off')" class="container-content--after" list-footer="getFeatureMap('lists')"></footer>
   <footer ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', 'off')" class="container-content--after group-btn">
@@ -31,7 +36,4 @@
       <span class="text-btn">got it</span>
     </button>
   </footer>
-
-
 </div>
-
