--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,5 +1,5 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section ng-show="isOnboarded('inbox')" class="container-content" list="items" list-order="top">
+  <section ng-show="isOnboarded('inbox')" class="container-content" list="items">
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="{trans: {itemType: 'item'}}" list-item-add-save="saveItem(newItem)">
@@ -21,16 +21,18 @@
       </form>
     </div>
 
-    <div class="animate-list-item-leave row-vertically-centered" ng-repeat="item in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
-    list-item="getList().length">
+    <div class="animate-list-item-leave row-vertically-centered"
+      ng-repeat="item in listInfos.array = (getFullArray()) | orderBy:'created':true | limitTo: currentListLimitTo" list-item>
       <a href class="link-list-item" swiper-click="openItemEditor(item)">
         <span class="text-link" clamp=2 ng-bind="item.title"></span>
       </a>
     </div>
-    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+    <div list-prompt list-prompt-infos="listInfos"
+      list-prompt-hide="[listItemAddActive, onboardingInProgress]"></div>
   </section>
   <footer ng-show="isOnboarded('inbox')" class="container-content--after" list-footer="getFeatureMap('inbox')"></footer>
 
+  <!-- ONBOARDING -->
   <section ng-if="!isOnboarded('inbox')" class="container-content">
     <div class="group-instruction">
       <h2 class="group-heading instruction row">never lose an
@@ -47,4 +49,5 @@
       <span class="text-btn">got it</span>
     </button>
   </footer>
+
 </div>
