--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -1,14 +1,16 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section class="container-content" list="allNotes" list-order="top" list-recent
-  list-open="openEditor('note', {trans: {favorited: false, itemType: 'note'}})"
-  ng-init="setListOnboarding('notes', listOnboarding)">
+  <section class="container-content" list="allNotes" list-recent
+    list-open="openEditor('note', {trans: {favorited: false, itemType: 'note'}})"
+    ng-init="setListOnboarding('notes', listOnboarding)">
     <div ng-show="isOnboarded('notes') || isListOnboardingLockedOrReleased('notes')">
       <h2 class="group-heading justified row">recent</h2>
       <div class="animate-list-item-leave tall"
-      ng-repeat="note in getList() | orderBy:'modified':true | limitTo: currentListLimitTo"
-      list-item="getList().length" ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
-      <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+        ng-repeat="note in listInfos.array = (getFullArray()) | orderBy:'modified':true
+        | limitTo: currentListLimitTo" list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
+      <div list-prompt="notes" list-prompt-infos="listInfos" list-prompt-hide="[onboardingInProgress]"></div>
     </div>
+
+    <!-- ONBOARDING -->
     <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', undefined)" class="group-instruction">
       <h2 class="group-heading instruction long row">what do you want to
         <span class="highlighted">remember</span>?
