--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -1,5 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section class="container-content" list="tasks | itemsFilter:{name:'byTagUUID', filterBy: context ? context.uuid : undefined}" list-order="top" swiper-prevent>
+  <section class="container-content"
+    list="tasks | itemsFilter:{name:'byTagUUID', filterBy: context ? context.uuid : undefined}" swiper-prevent>
     <div class="group-mixed heading vertically-centered">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
@@ -15,12 +16,12 @@
       <div class="group-mixed--right" task-list-completed></div>
     </div>
     <div list-item-add="getNewTaskWithContext(context)" list-item-add-save="saveTask(newItem)"
-    ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
+      ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
-    ng-repeat="task in contextTasks = (getList() | paramFilter:isListItemVisible) | orderBy:'created':true
-    | limitTo: currentListLimitTo"
-    list-item="contextTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+      ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
+      | orderBy:'created':true | limitTo: currentListLimitTo" list-item
+      ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
+    <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
 </div>
