--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section class="container-content" list="contexts" list-order="top" swiper-prevent>
+  <section class="container-content" list="contexts" swiper-prevent>
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="{tagType:'context'}" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed swiper-no-swiping"
@@ -20,8 +20,8 @@
       </form>
     </div>
     <div class="animate-list-item-leave"
-    ng-repeat="context in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
-    list-item="getList().length">
+      ng-repeat="context in listInfos.array = (getFullArray()) | orderBy:'created':true
+      | limitTo: currentListLimitTo" list-item>
       <div class="group-mixed">
         <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.title"></span>
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+    <div list-prompt list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
     <div class="group-mixed">
       <a href class="group-mixed--middle link" swiper-click="swipeToContext()">
         <span class="text-link">no context</span>
