--- a/frontend/core/src/main/webapp/static/app/base/listPrompt.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPrompt.html
@@ -1,6 +1,6 @@
-<div class="list-prompt">
-  <div ng-if="isNoItemsPromptVisible()" class="no-items-prompt">no {{::promptType}}</div>
-  <div id="loadingAnimation" class="loading-prompt text-downplayed text-details">
+<div class="row list-prompt">
+  <div ng-if="isNoItemsPromptVisible()" class="text-downplayed text-details">no {{::promptType}}</div>
+  <div class="loading-prompt text-downplayed text-details">
     <span>loading</span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
   </div>
 </div>
