Renamed recent tasks/notes to all tasks/notes.

--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -10,7 +10,7 @@
         <div ng-if="isFeatureLoaded('focus')" ng-include="urlBase + 'app/focus/focusSlides.html'" include-replace></div>
         <div ng-if="isFeatureActive('inbox')" ng-include="urlBase + 'app/main/inbox.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('tasks')" ng-include="urlBase + 'app/tasks/tasksSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('notes')" ng-include="urlBase + 'app/notes/notesRecent.html'" include-replace></div>
+        <div ng-if="isFeatureActive('notes')" ng-include="urlBase + 'app/notes/notesAll.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('lists')" ng-include="urlBase + 'app/lists/listsSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('list')" ng-include="urlBase + 'app/lists/listSlides.html'" include-replace></div>
         <div ng-if="isFeatureActive('trash')" ng-include="urlBase + 'app/main/trash.html'" include-replace></div>
