--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -4,7 +4,7 @@
     <div ng-show="isOnboarded('tasks') || isListOnboardingLockedOrReleased('tasks')">
       <div class="group-mixed heading">
         <div class="group-mixed--middle">
-          <h2 class="group-heading justified">recent</h2>
+          <h2 class="group-heading justified">all tasks</h2>
         </div>
         <div class="group-mixed--right" task-list-completed></div>
       </div>
