--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -36,5 +36,7 @@
 <body>
   <div class="web" root-view></div>
   <script src="/static/${project.version}/em.min.js"></script>
+  <script src="/static/${project.version}/lib/lawnchair.js"></script>
+  <script src="/static/${project.version}/lib/lawnchair-indexeddb.js"></script>
 </body>
 </html>
