--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -34,6 +34,8 @@
   <script src="static/lib/base64.js"></script>
   <script src="static/lib/elastic.js"></script>
   <script src="static/lib/clamp.js"></script>
+  <script src="static/lib/lawnchair/lawnchair.js"></script>
+  <script src="static/lib/lawnchair/lawnchair-dom.js"></script>
 
   <script src="static/common/fastclick.js"></script>
   <script src="static/common/common.js"></script>
@@ -60,6 +62,7 @@
   <script src="static/app/base/http/HttpClientService.js"></script>
   <script src="static/app/base/http/HttpRequestQueueService.js"></script>
   <script src="static/app/base/storage/LocalStorageService.js"></script>
+  <script src="static/app/base/storage/PersistentStorageService.js"></script>
   <script src="static/app/base/storage/SessionStorageService.js"></script>
   <script src="static/app/base/AnalyticsService.js"></script>
   <script src="static/app/base/ArrayService.js"></script>
