--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -33,7 +33,6 @@
     var html5Mode = false;
     var bindToFocusEvent = false;
     var bindToResumeEvent = true;
-    var useOfflineBuffer = true;
 
     // Wait for device API libraries to load
     //
@@ -50,7 +49,7 @@
   </script>
 </head>
 <body onload="onLoad()">
-  <div class="android" root-view></div>
+  <div class="android" root-view="offline"></div>
   <script src="static/${project.version}/em.min.js"></script>
 </body>
 </html>
